k8s/dev2/frontend/frontend_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: dev2
spec:
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 3000
