k8s/dev2/frontend/frontend_ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: frontend-ingressroute
  namespace: dev2
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`app-dev2.heyrahul.cloud`)
      services:
        - name: frontend
          port: 80
